--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "font-awesome": "^4.7.0",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0"
   },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.1"
-  }
+  "devDependencies": {}
 }
