--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "email-validator": "^2.0.3",
     "express": "~4.16.0",
-    "font-awesome": "^4.7.0",
     "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
-    "jquery": "^3.3.1",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "nodemailer": "^4.6.4"
   },
   "devDependencies": {}
 }
