--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "email-validator": "^2.0.3",
     "express": "~4.16.0",
+    "express-force-ssl": "^0.3.2",
     "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
