Added blog routes and page

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,10 @@
 {
   "test":{
-    "PORT":3000
+    "PORT":3000,
+    "MONGODB_URI":"mongodb://localhost:27017/VincentSordoDBTest"
   },
   "development":{
-    "PORT":3000
+    "PORT":3000,
+    "MONGODB_URI":"mongodb://localhost:27017/VincentSordoDBDevelopment"
   }
 }
