--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.0",
     "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.1.0",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
     "nodemailer": "^4.6.4"
