--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.0",
     "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.0",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
