--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dynamoose": "^0.8.7",
     "email-validator": "^2.0.3",
     "express": "~4.16.0",
     "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
     "lodash": "^4.17.10",
-    "mongoose": "^5.1.0",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
-    "nodemailer": "^4.6.4"
+    "nodemailer": "^4.6.4",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {}
 }
